--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "build": "rm -rf dist/* && gulp generateTsoa && tsc",
     "start": "node index.js"
   },
-
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -35,6 +34,7 @@
     "mongoose": "^5.10.7",
     "multer": "^1.4.2",
     "node-cache": "^5.1.0",
+    "nodemailer": "^6.4.16",
     "pg": "^7.18.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -47,6 +47,7 @@
     "winston-daily-rotate-file": "^4.5.0"
   },
   "devDependencies": {
+    "@elastic/elasticsearch": "^7.10.0",
     "@types/bcrypt": "^3.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
@@ -63,6 +64,7 @@
     "@types/multer": "^1.4.2",
     "@types/node": "^13.11.1",
     "@types/node-cache": "^4.2.5",
+    "@types/nodemailer": "^6.4.0",
     "@types/rimraf": "^3.0.0",
     "@types/sharp": "^0.24.0",
     "@types/swagger-ui-express": "^4.1.2",
