--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "utf-8-validate": "^5.0.2",
     "uuid": "^7.0.2",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.0"
+    "winston-daily-rotate-file": "^4.5.0",
+    "ws": "^7.4.0"
   },
   "devDependencies": {
     "@elastic/elasticsearch": "^7.10.0",
